<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.btdarcy.seniordesign.SecondActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout"
        android:layout_centerHorizontal="true"
        android:text="@string/battery_life" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:indeterminate="false" />

    <ToggleButton
        android:id="@+id/lockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="@string/unlocked"
        android:textOn="@string/locked"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/progressBar" />

    <Button
        android:id="@+id/logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logs"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />

    <Button
        android:id="@+id/timed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lockButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/timed_lock" />

</RelativeLayout>
